--- a/package.json
+++ b/package.json
@@ -20,27 +20,28 @@
     "prod": "npm run build && node dist/"
   },
   "devDependencies": {
-    "babel-cli": "^6.5.1",
-    "babel-eslint": "^5.0.0-beta10",
-    "babel-plugin-syntax-async-functions": "^6.5.0",
-    "babel-plugin-transform-async-to-generator": "^6.5.0",
-    "babel-polyfill": "^6.5.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-register": "^6.3.13",
-    "chai": "^3.5.0",
-    "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^5.0.1"
+    "babel-cli": "6.26.0",
+    "babel-eslint": "10.0.2",
+    "babel-plugin-syntax-async-functions": "6.13.0",
+    "babel-plugin-transform-async-to-generator": "6.24.1",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-register": "6.26.0",
+    "chai": "4.2.0",
+    "eslint": "6.1.0",
+    "eslint-config-airbnb": "18.0.0"
   },
   "dependencies": {
-    "koa": "^2.0.0-alpha.3",
-    "koa-bodyparser": "^3.0.0",
-    "koa-logger": "^2.0.0",
-    "koa-router": "^7.0.0",
-    "koa-static": "^4.0.1",
-    "mongoose": "^4.4.3",
-    "nodemon": "^1.8.1",
-    "restc": "0.0.3",
-    "should": "^8.2.2",
-    "supertest": "^1.2.0"
+    "@koa/cors": "3.0.0",
+    "koa": "2.7.0",
+    "koa-bodyparser": "4.2.1",
+    "koa-logger": "3.2.1",
+    "koa-router": "7.4.0",
+    "koa-static": "5.0.0",
+    "mongoose": "5.6.9",
+    "nodemon": "1.19.1",
+    "restc": "0.4.0",
+    "should": "13.2.3",
+    "supertest": "4.0.2"
   }
 }
